<resources>
    <string name="app_name">HaiVN</string>
    <string name="cancel">Thoát</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="fullname">Họ tên</string>
    <string name="gallery">Thư viện ảnh</string>
    <string name="home">Home</string>
    <string name="hot">Hot</string>
    <string name="login">Login</string>
    <string name="accept">OK</string>
    <string name="or">Hoặc</string>
    <string name="register">Đăng ký</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="total_like">Lượt Thích</string>
    <string name="total_posts">Bài Đăng</string>
    <string name="post">Bài viết</string>
    <string name="profile">Profile</string>
    <string name="update_profile_title">Chỉnh sửa trang cá nhân</string>
    <string name="update_avatar">Thay đổi ảnh</string>
    <string name="update_starting">Đang cập nhật, xin chờ chút xíu...!</string>
    <string name="update_profile_error">Xảy ra lỗi khi cập nhật! Thử lại?</string>
    <string name="update_profile_success">Cập nhật thành công!</string>
    <string name="agree_policy">Đồng ý với điều khoản và chính sách</string>
    <string name="registration_name_required">Yêu cầu nhập họ tên</string>
    <string name="registration_email_required">Yêu cầu nhập email</string>
    <string name="registration_username_required">Yêu cầu nhập tên đăng nhập</string>
    <string name="registration_password_required">Yêu cầu nhập mật khẩu</string>
    <string name="registration_check_policy_required">Hãy đồng ý với Điều Khoản và Chính Sách trước!</string>
    <string name="action_cancel">Thoát</string>
    <string name="action_create_account">Tạo tài khoản</string>
    <string name="action_forgot_password">Quên mật khẩu</string>
    <string name="action_login">Login</string>
    <string name="action_register">Đăng ký</string>
    <string name="error_user_or_password_incorrect">Sai mật khẩu hoặc tài khoản</string>
    <string name="error_connect">Lỗi kết nối</string>
    <string name="title_email">Email</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_fullname">Họ tên</string>
    <string name="title_gallery">Thư viện ảnh</string>
    <string name="title_home">Home</string>
    <string name="title_hot">Hot</string>
    <string name="title_ok">OK</string>
    <string name="title_or">Hoặc</string>
    <string name="title_username">Tên đăng nhập</string>
    <string name="title_password">Mật khẩu</string>
    <string name="title_post">Bài viết</string>
    <string name="title_profile">Profile</string>
    <string name="msg_last_data">Hết bài viết</string>
    <string name="comment">Bình Luận</string>
    <string name="post_comment">Đăng</string>
    <string name="load_data_error">Tải dữ liệu lỗi, thử lại?!</string>
    <string name="facebook_app_id">292342098195244</string>
    <string name="fb_login_protocol_scheme">fb292342098195244</string>
    <string name="action_post">Post</string>
    <string name="action_add_title">Thêm nội dung</string>
    <string name="error_any">Có lỗi xảy ra</string>
</resources>
