<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    >

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_40"

        />

    <EditText
        android:id="@+id/edit_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_below="@+id/text_logo"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/background_editext"
        android:padding="@dimen/dp_12"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        android:hint="@string/title_username"
        android:textColorHint="@color/color_light_grey"
        android:textColor="@color/color_grey"
        />

    <EditText
        android:id="@+id/edit_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_below="@+id/edit_username_login"
        android:background="@drawable/background_editext"
        android:padding="@dimen/dp_12"
        android:hint="@string/title_password"
        android:textColorHint="@color/color_light_grey"
        android:textColor="@color/color_grey"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@+id/edit_password_login"
        android:text="@string/action_login"
        android:textAllCaps="false"
        android:padding="@dimen/dp_15"
        android:textColor="@color/color_grey"
        android:background="@drawable/background_button_login"
        />

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/action_forgot_password"
        android:textColor="@color/color_grey"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_button_login"
        android:textColor="@color/color_grey"
        android:textAllCaps="false"
        android:text="@string/action_create_account"
        />

    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_160"
        android:background="@color/color_light_grey"
        android:visibility="gone"
        />

</RelativeLayout>
