<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    >

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_40"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_80"
        />

    <EditText
        android:id="@+id/edit_fullname_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edit_username"
        android:layout_below="@+id/text_logo"
        android:layout_marginTop="@dimen/dp_50"
        android:padding="@dimen/dp_12"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        android:hint="@string/title_fullname"
        android:textColorHint="@color/color_light_grey"
        android:textColor="@color/color_grey"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        />

    <EditText
        android:id="@+id/edit_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edit_password"
        android:layout_below="@+id/edit_fullname_register"
        android:padding="@dimen/dp_12"
        android:hint="@string/title_email"
        android:textColorHint="@color/color_light_grey"
        android:textColor="@color/color_grey"
        android:layout_marginTop="@dimen/dp_minus_2"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        />

    <EditText
        android:id="@+id/edit_username_resgiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edit_password"
        android:layout_below="@+id/edit_email_register"
        android:padding="@dimen/dp_12"
        android:hint="@string/title_username"
        android:textColorHint="@color/color_light_grey"
        android:textColor="@color/color_grey"
        android:layout_marginTop="@dimen/dp_minus_2"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="text"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        />

    <EditText
        android:id="@+id/edit_password_resgiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edit_password"
        android:layout_below="@+id/edit_username_resgiter"
        android:padding="@dimen/dp_12"
        android:hint="@string/title_password"
        android:textColorHint="@color/color_light_grey"
        android:textColor="@color/color_grey"
        android:layout_marginTop="@dimen/dp_minus_2"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        />

    <CheckBox
        android:id="@+id/checkbox_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password_resgiter"
        android:layout_alignLeft="@+id/edit_password_resgiter"
        android:layout_marginTop="@dimen/dp_5"
        android:button="@drawable/background_checkbox_accept"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/checkbox_accept"
        android:layout_below="@+id/edit_password_resgiter"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/agree_policy"
        android:textSize="@dimen/dp_15"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textAllCaps="false"
        android:padding="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_50"
        android:textColor="@color/color_grey"
        android:layout_below="@+id/checkbox_accept"
        android:background="@drawable/background_button_login"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</RelativeLayout>
