<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@android:color/white"
        >

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:src="@drawable/logo"
            />

        <TextView
            android:id="@+id/text_title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textSize="@dimen/sp_20"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/dp_30"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            >
            <Button
                android:id="@+id/button_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_post"
                android:textColor="@android:color/holo_blue_dark"
                android:background="@android:color/transparent"
                />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/toolbar"
        android:background="@color/color_grey"
        />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@android:color/transparent"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/dp_15"
        android:textColor="@android:color/black"
        android:hint="@string/action_add_title"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/toolbar"
        android:background="@color/color_grey"
        />

    <ImageView
        android:id="@+id/image_selected_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="@dimen/sp_15"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/toolbar"
        android:background="@color/color_grey"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="@dimen/sp_20"
        android:textColor="@android:color/black"
        android:layout_margin="@dimen/dp_10"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_garelly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_2"/>

</LinearLayout>
