<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/text_title_dialog"
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:padding="@dimen/dp_10"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:gravity="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_light_grey"/>

    <TextView
        android:id="@+id/txtMessageDialog"
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/color_grey"
        android:gravity="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_light_grey"/>

    <LinearLayout
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textColor="@color/color_grey"
            android:textStyle="bold"
            />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_30"
            android:background="@color/color_light_grey"
            android:layout_marginTop="@dimen/dp_8"
            />

        <Button
            android:id="@+id/button_accept"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept"
            android:background="@android:color/transparent"
            android:textColor="@color/color_grey"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>
