<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.profile.UpdateProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_update_profile_close_btn"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:src="@drawable/ic_close_black_24dp"
            />

        <TextView
            android:id="@+id/text_title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:text="@string/update_profile_title"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <ImageView
                android:id="@+id/image_update_profile_done_btn"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_marginRight="@dimen/dp_5"
                android:src="@drawable/ic_check_black_24dp"
                android:background="@drawable/background_effect_botton"
                />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progress_update_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/color_soft_green"
        android:visibility="gone"
        />

    <View
        android:id="@+id/view_border_bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@color/color_light_grey"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_50">

        <LinearLayout
            android:id="@+id/linear_update_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_5"
            >
            <ImageView
                android:id="@+id/image_avatar_profile"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:src="@drawable/logo"
                />
            <TextView
                android:id="@+id/text_update_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_avatar"
                android:textStyle="bold"
                android:textSize="@dimen/sp_15"
                android:layout_marginTop="@dimen/dp_5"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear_update_avatar"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullname"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_18"
                    />

                <EditText
                    android:id="@+id/edit_fullname_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullname"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_18"
                    />

                <EditText
                    android:id="@+id/edit_email_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_18"
                    />

                <EditText
                    android:id="@+id/edit_password_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
